--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@ port = 8787
 local_protocol = "http"
 
 [env.vars]
-CUSTOM_DOMAIN = "docker.gf.sh.cn"
+CUSTOM_DOMAIN = "gf.sh.cn"
 
 [env.dev.vars]
 MODE = "debug"
